# jp-novel-tts

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  build.rs
crates/ratatui-explorer/: Cargo.toml
src/: api.rs  main.rs  wav.rs
