[package]
name = "jp-novel-tts"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
crossterm = "0.27.0"
env_logger = "0.11.3"
log = "0.4.21"
ratatui = { version = "*", default-features = false, features = ["crossterm"] }
ratatui-explorer = { path = "crates/ratatui-explorer" }
regex = "1.10.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"

[build-dependencies]
bindgen = "0.65.1"
static_vcruntime = "2.0"

[build]
build-stage = 1
target = ["x86_64-win7-windows-msvc"]
